# meshbbs

./: .gitignore  BUG_FIX_SUMMARY.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DATA_DRIVEN_STATUS.md  DEVICE_STARTUP_HANDLING.md  FEATURE_PUBLIC_LOGIN_CONFIG.md  GRACEFUL_STARTUP_SUMMARY.md  HARDCODED_CONTENT_ANALYSIS.md  INSTALL.md  Justfile  LICENSE  PERMISSIONS.md  PHASE10_RESULTS.md  PRE_MERGE_CHECKLIST.md  PRODUCTION_READINESS.md  QA_TEST_SCRIPT.md  QUEUE_HEALTH_MONITORING.md  README.md  REFACTOR_SUMMARY.md  SECURITY_FIX_AUTH_REQUIRED.md  SESSION_SUMMARY.md  TODO.md  TODO_OLD.md  WHATS_LEFT.md  build.rs  config.example.toml  install.sh  uninstall.sh
.github/workflows/: ci.yml  pages.yml
docs/: DAEMON-AND-GRACEFUL-SHUTDOWN.md  DARK_NAVIGATION_SYSTEM.md  DOCUMENTATION_TODO.md  MIGRATION_COMPACT_UI.md  PHASE_4_QUEST_SOLUTIONS.md  README.md  UX_COMPARISON.md  UX_DEMO.md  WORLD_MAP.md  _config.yml  index.md
docs/administration/: CONFIGURATION_SECURITY.md  SYSTEMD_SETUP.md  TRIGGER_ENGINE_ADMIN.md  backup-recovery.md  commands.md  daemon-mode-detailed.md  daemon-mode.md  moderation.md  setup.md  tinymush-admin-setup.md  trigger-editing-guide.md  user-management.md
docs/api/: index.md
docs/archive/: README.md
docs/archive/content/: npc_dialogues.md
docs/archive/design/: BATTLESHIP_DESIGN.md  CURRENCY_SYSTEM_DESIGN.md  GAMES_IDEAS.md  MUD_MUSH_PROPOSAL.md  NPC_DIALOGUE_SYSTEM_DESIGN.md  NPC_SYSTEM.md  TRADE_API_RESEARCH.md  game_telemetry.md
docs/archive/milestones/: ALPHA_TESTING_SETUP.md  ASYNC_INTEGRATION_COMPLETE.md  DEVELOPMENT_STANDARDS.md  I18N_MIGRATION_CHECKLIST.md
docs/archive/planning/: EDITROOM_COMMAND.md  LANDING_GAZEBO_IMPROVEMENTS.md  NPC_DIALOGUE_SEEDING.md  PHASE1_MULTI_TOPIC_DIALOGUE.md  PHASE2_CONVERSATION_STATE.md  PHASE3_BRANCHING_DIALOGUE.md  PHASE4_CONDITIONAL_DIALOGUE.md  PHASE5_DIALOG_ACTIONS.md  PHASE5_PROGRESS.md  PHASE6_ADMIN_DIALOG_EDITOR.md  PHASE9_2_COMPLETE.md  PRE_ALPHA_ANALYSIS.md  REMAINING_I18N_STRINGS.md  SCHEMA_MIGRATION.md  TMUSH_ADMIN_BOOTSTRAP.md  TUTORIAL_DESIGN.md
docs/development/: BATTLESHIP_DESIGN.md  BLACKJACK_INTERACTIVE.md  BLACKJACK_INTERACTIVE_DESIGN.md  BLACKJACK_MULTIPLAYER_SOLUTION.md  BLACKJACK_PUBLIC_COMMAND.md  CLONING_SECURITY.md  COMBAT_TODO.md  ESP32_NETWORK_TRANSPORT_FEASIBILITY.md  MERCHANT_ITEMS_GUIDE.md  MUD_MUSH_DESIGN.md  MUD_MUSH_PROPOSAL.md  NPC_CONVERSATION_STATE_TRACKING.md  OBJECT_RESPAWN_DESIGN.md  PHASE10_PLAN.md  PHASE5_PROGRESS.md  SMART_QUOTE_FIX.md  TINYMUSH_IMPLEMENTATION_PLAN.md  TMUSH_ADMIN_COMMANDS.md  TMUSH_ADMIN_PERMISSIONS.md  architecture.md  building.md  fortune-module.md  tmush_schema.md
docs/getting-started/: RASPBERRY_PI_SETUP.md  configuration.md  first-run.md  installation.md
docs/hardware/: compatibility.md  device-setup.md
docs/implementation/: CONTENT_IMPLEMENTATION_STATUS.md  CONTENT_POPULATION_PLAN.md  INTEGRATION_SUMMARY.md  PHASE_4_IMPLEMENTATION_NOTES.md  README.md
docs/qa/: 200-byte-compliance.md  real-world-test-plan.md
docs/user-guide/: TRIGGER_ENGINE_GUIDE.md  TUTORIAL_WALKTHROUGH.md  commands.md  connecting.md  economy.md  fuzzy-object-matching.md  games.md  housing.md  message-topics.md  troubleshooting.md
examples/: test_weather.rs
scripts/: check_utf8_budget.py  diagnose_npc_corruption.rs  init_npc_dialogues.sh  install_build_deps.sh  meshbbs-daemon.sh  migrate_messages.rs
src/: lib.rs  logutil.rs  main.rs  metrics.rs  validation.rs
src/bbs/: commands.rs  dispatch.rs  eightball.rs  fortune.rs  game_registry.rs  games.rs  mod.rs  public.rs  roles.rs  server.rs  session.rs  slotmachine.rs  tinyhack.rs  weather.rs  welcome.rs
src/config/: mod.rs
src/meshtastic/: framer.rs  mod.rs  slip.rs
src/protobuf/: mod.rs
src/storage/: backup.rs  backup_scheduler.rs  mod.rs
src/tmush/: achievement.rs  builder_commands.rs  clone.rs  commands.rs  companion.rs  currency.rs  currency_migration.rs  errors.rs  housing_cleanup.rs  inventory.rs  migration.rs  mod.rs  quest.rs  resolver.rs  room_manager.rs  seed_loader.rs  shop.rs  state.rs  storage.rs  trigger.rs  tutorial.rs  types.rs
src/tmush/trigger/: admin.rs  evaluator.rs  integration.rs  mod.rs  parser.rs  rate_limit.rs
test_data/meshbbs_db_perf_71589/users/: perfuser%5F0.json  perfuser%5F1.json  perfuser%5F10.json  perfuser%5F11.json  perfuser%5F12.json  perfuser%5F13.json  perfuser%5F14.json  perfuser%5F15.json  perfuser%5F16.json  perfuser%5F17.json  perfuser%5F18.json  perfuser%5F19.json  perfuser%5F2.json  perfuser%5F3.json  perfuser%5F4.json  perfuser%5F5.json  perfuser%5F6.json  perfuser%5F7.json  perfuser%5F8.json  perfuser%5F9.json
test_data/meshbbs_load_test_26831/users/: user%5F0.json  user%5F1.json  user%5F10.json  user%5F11.json  user%5F12.json  user%5F13.json  user%5F14.json  user%5F15.json  user%5F16.json  user%5F17.json  user%5F18.json  user%5F2.json  user%5F3.json  user%5F4.json  user%5F5.json  user%5F6.json  user%5F7.json  user%5F8.json  user%5F9.json
tests/: achievement_integration.rs  achievement_management.rs  ack_handling.rs  admin_commands.rs  auth_password.rs  bulletin_board_basic.rs  chunk_markers.rs  clone_security.rs  common.rs  compact_admin_shortcuts.rs  companion_integration.rs  companion_management.rs  crafting_recipes.rs  currency_system.rs  deletion_log.rs  dm_preempts_broadcast.rs  eightball_behavior.rs  first_dm_login.rs  first_help_no_banner.rs  flat_mode_ux.rs  fortune_behavior.rs  fuzzy_object_matching.rs  help_after_login.rs  help_broadcast_delay.rs  help_message_chunking.rs  help_public_commands.rs  help_roles.rs  help_single_letter.rs  housing_lifecycle.rs  ident_beacon_behavior.rs  integration_public_dm.rs  inventory_integration.rs  load_performance.rs  lock_persistence.rs  mail_system_basic.rs  main_menu_aliases.rs  message_id_crc.rs  message_size.rs  mod_actions_compact.rs  moderation.rs  (+67 more)
tests/test-data-int/: README.md  topics.json
tests/test-data-int/slotmachine/: jackpot.json  players.json
tests/test-data-int/users/: alice.json  carol.json
